welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:5: error: identifier expected but 'new' found.
	var tab: new Array[Int] (10);
                 ^