welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
	var hauteur: Int = getMondeHauteur();
	var largeur: Int = getMondeLargeur();
	var tab: new Array[Int] (10);

	def lireColonne(){
		var n: Int = 0;
		for(n <- 1 to hauteur){
			TCouleur(n) = getCouleurSol();
			avance();
		}
	}
	lireColonne()
}
